Hopefully fixing a white line on the edge on safari

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+div {
+    box-sizing: border-box;
+    }
+
 body {
     background-color: #fff;
     font-family: 'Poppins', sans-serif;
